fixed the text spacing in the application when viewed on mobile devices

--- a/src/home/home.css
+++ b/src/home/home.css
@@ -7,7 +7,7 @@
   margin-top: 220px;
   margin-right: auto;
   margin-left: auto;
-  width: 60%;
+  width: 90%;
   align-self: center;
   display: block;
 }
