--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,12 @@ body {
 }
 
 .topSpacer {
-  margin: 100px;
+  margin-top: 100px;
 }
 .pageContent {
-  width: 100%;
+  width: 90%;
+  margin-right:auto;
+  margin-left:auto;
 }
 
 h1 {
